--- a/vishnu-master/index.html
+++ b/vishnu-master/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Grilli - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
+  <title>Sneha's - Amazing & Delicious Food</title>
+  <meta name="title" content="Sneha's - Amazing & Delicious Food">
   <meta name="description" content="This is a Restaurant html template made by codewithsadee">
 
   <!-- 
@@ -61,15 +61,7 @@
   <div class="topbar">
     <div class="container">
 
-      <address class="topbar-item">
-        <div class="icon">
-          <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
-        </div>
 
-        <span class="span">
-          Restaurant St, Delicious City, London 9578, UK
-        </span>
-      </address>
 
       <div class="separator"></div>
 
